Fixed extra white space to right of page

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ code {
   font-size: 36px;
   width: 50%;
   text-align: center;
+  text-shadow: 2px 2px black;
 }
 
 #intro p span {
@@ -51,7 +52,6 @@ code {
   text-align: center;
   z-index: 20;
   color: white;
-  transform: scale(1.1);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -60,11 +60,12 @@ code {
 /* ------------ ABOUT ------------ */
 
 .about {
-  background-color: lightblue;
+  background-color: rgb(240, 239, 230);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  border-top: 5px solid lightblue;
 }
 
 .about h2 {
